0.10 (Unreleased)
=================

 - Made the tests compatible with a zc.buildout installed with Distribute rather
   than Setuptools. [pumazi]

 - Handle OSErrors on symlink and warn the user. MacOSX can raise OSError due to
   an existing file here even if os.path.exists returns False.
   [MatthewWilkes]

 - Include modules from namespace packages in the omelette. (Namespace packages
   can not define anything in __init__.py, but they can contain modules.)
   [hathawsh]

 - Made the tests compatible with virtualenv.
   [hathawsh]

0.9 (2009-04-11)
================

 - Adjusted log-levels to be slightly less verbose for non-critical
   errors. [malthe]

0.8 (2009-01-14)
================

 - Fixed 'OSError [Errno 20] Not a directory' on zipped eggs, for
   example when adding the z3c.sqlalchemy==1.3.5 egg.
   [maurits]

0.7 (2008-09-10)
================

 - Actually add namespace declarations to generated __init__.py files.
   [davisagli]

 - Use egg-info instead of guessing paths from package name. This also fixes
   eggs which have a name different from the contents.
   [fschulze]


0.6 (2008-08-11)
================

 - Documentation changes only.
   [davisagli]


0.5 (2008-05-29)
================

 - Added uninstall entry point so that the omelette can be uninstalled on Windows without
   clobbering things outside the omelette path.
   [optilude]

 - Support Windows using NTFS junctions (see http://www.microsoft.com/technet/sysinternals/FileAndDisk/Junction.mspx)
   [optilude]

 - Ignore zipped eggs and fakezope2eggs-created links.
   [davisagli]

 - Added 'packages' option to allow merging non-eggified Python packages to any directory in the omelette
   (so that, for instance, the contents of Zope's lib/python can be merged flexibly).
   [davisagli]


0.4 (2008-04-07)
================

 - Added option to include Products directories.
   [davisagli]

 - Fixed ignore-develop option.
   [davisagli]


0.3 (2008-03-30)
================
